--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,7 +10,7 @@
   --background-blue: #282A36;
   --background-black: #000000;
   --background-blue-hamburger: rgba(40, 42, 54, 0.95);
-  --promo-background: rgba(217, 167, 235, 0.05);
+  --promo-background: rgba(66, 51, 71, 0.05);
   --button-background: rgba(217, 167, 235, 0.2);
   --date-background: rgba(255, 255, 255, 0.1);
   --date-text: rgba(255, 255, 255, 0.8);
@@ -315,15 +315,26 @@ a:active {
 
 .header-footer-gallery {
   background-color: var(--background-black);
-  padding: 10px 0;
   margin-bottom: 2rem;
+  display: grid;
+  grid-gap: 20px;
+  grid-template-columns: 1fr 1fr;
 }
 
 .header-footer-gallery h3 {
   padding-left: 12px;
 }
 
-.gallery-footer {}
+.gallery-footer {
+  position: relative;
+  padding-bottom: 24px;
+}
+
+.hf-logo {
+  position: absolute;
+  bottom: 1rem;
+  right: 1rem;
+}
 
 .gallery-footer-text {
   background-color: var(--background-black);
@@ -739,6 +750,30 @@ a.category:hover {
   .post-image {
     width: 100%;
     /* max-width: 400px; */
+  }
+
+  .header-footer-gallery {
+    grid-template-columns: 1fr;
+    grid-gap: 10px;
+  }
+
+  .gallery-footer {
+    padding-bottom: 16px;
+  }
+
+  .gallery-footer-text {
+    padding-left: 12px;
+  }
+
+  .gallery-footer-text p {
+    font-size: 0.8rem;
+  }
+
+  .gallery-footer-image {
+    width: 100%;
+    height: 320px;
+    object-fit: cover;
+    display: block;
   }
 
   .footer-navigation {
