--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -336,8 +336,12 @@ a:active {
   right: 1rem;
 }
 
+/* .gallery-footer-image {
+  width: 75%;
+  max-width: 75%;
+} */
+
 .gallery-footer-text {
-  background-color: var(--background-black);
   padding-left: 1rem;
   width: 75%;
   max-width: 75%;
@@ -777,6 +781,11 @@ a.category:hover {
     display: block;
   }
 
+  .hf-logo {
+    width: 40px;
+    height: auto;
+  }
+
   .footer-navigation {
     display: grid;
     grid-template-columns: 1fr;
@@ -788,7 +797,6 @@ a.category:hover {
 /* @media only screen and (min-width: 600px) { */
 
 @media only screen and (min-width: 480px) and (max-width: 768px) and (orientation: landscape) {
-
   h1 {
     font-size: 1.802rem;
     /* Minor third scale */
@@ -908,7 +916,7 @@ a.category:hover {
   }
 
   .gallery-footer-image {
-    width: 80%;
+    width: 100%;
     height: 320px;
     object-fit: cover;
     margin: 0 auto;
@@ -918,13 +926,12 @@ a.category:hover {
     width: 40px;
     height: auto;
   }
-}
 
-.footer-navigation {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  gap: 1rem;
-}
+  .footer-navigation {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 1rem;
+  }
 }
 
 
@@ -1027,6 +1034,8 @@ a.category:hover {
     width: 100%;
     height: 320px;
     object-fit: cover;
+    margin: 0 auto;
+
   }
 
   .hf-logo {
@@ -1037,6 +1046,7 @@ a.category:hover {
 
 
 /* Large devices (iPad Pro, laptops/desktops, 992px and up) */
+
 @media only screen and (min-width: 992px) {
   h1 {
     font-size: 2.774rem;
@@ -1103,6 +1113,7 @@ a.category:hover {
 
 
 /* Extra large devices (large laptops and desktops, 1200px and up) */
+
 @media only screen and (min-width: 1200px) {
   h1 {
     font-size: 2.488rem;
